test/negative/NativeBody.java
public class NativeBody {
    public NativeBody() {}
    public static native void f() {
    }
}
